# knet

./: CMakeLists.txt  Doxyfile  HISTORY  README.md  build.sh
doc/: doxygen_entrydb_14500.tmp  doxygen_entrydb_8760.tmp  doxygen_entrydb_9144.tmp  knet.pptx
doc/html/: README_8md.html  README_8md_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  a00001.html  a00001_aa9dafacc315dea6e76e247583b999577.html  a00001_ac3e75c7a8dd3efe8c59dc88b6063e079.html  a00002.html  a00002_a0383fe415a6ee3a6bdf0c3a7b4b32ba0.html  a00002_a2bc571705fea7b02c4aef0c67f826759.html  a00002_a5694557c50d8861d557e922d5a49203b.html  a00002_a887426648129995bc262be3e38374701.html  a00002_ae174c357652d393f059cc8feacdbbbc9.html  a00003.html  a00003_a472a73ec25879c79d70a69da7ac4ef05.html  a00003_a906d46beefad22b8bebb76b2977827ab.html  a00003_aa9dafacc315dea6e76e247583b999577.html  a00003_abd5fe4879cdd36bb90bb04798280551c.html  a00003_ac3e75c7a8dd3efe8c59dc88b6063e079.html  a00004.html  a00004_a0fc27da023067041124ecc664536f285.html  a00004_a1dff9bf18d0c5b4591b31bc5929422a5.html  a00004_a1f00a88e28eb9f57440dbfc662f0b50e.html  a00004_a250e85c925e44e72600c9d662c0d328d.html  a00004_a27701935d3cd7358a0b92b3495afce7f.html  a00004_a330128a5e8c2f7d9ae55bda7ccecb932.html  a00004_a354fdca953fc556698030d54f8e5e520.html  a00004_a3d1b48975129aa0f05c24585077470db.html  a00004_a405671b2411da0242396a548a786dae7.html  a00004_a431954bc3370c2ccbfe9bc115ea62481.html  a00004_a441b774dd529abf1712e5e69287658ba.html  a00004_a5416b45831570cc5409ec395f784e812.html  a00004_a5694557c50d8861d557e922d5a49203b.html  a00004_a581d193365ab12e09fd8908d04a3f2a8.html  a00004_a5f0222e66e5b27244bb639a56bb79233.html  a00004_a61224f966c4df759a33ba36b43556b1c.html  a00004_a6f756b85f16f61be42aa47e79ed836a9.html  a00004_a70fa475c90dda9133dfaa9fdcb79e958.html  a00004_a887426648129995bc262be3e38374701.html  a00004_a8bc54a1cbfc3bab17586ca3bfae321b4.html  (+9596 more)
doc/latex/: README_8md.tex  _r_e_a_d_m_e_8md.tex  a00001.tex  a00002.tex  a00003.tex  a00004.tex  a00005.tex  a00006.tex  a00007.tex  a00008.tex  a00009.tex  a00010.tex  a00011.tex  a00012.tex  a00013.tex  a00014.tex  a00015.tex  a00016.tex  a00017.tex  a00018.tex  a00019.tex  a00020.tex  a00021.tex  a00022.tex  a00023.tex  a00024.tex  a00025.tex  a00026.tex  a00027.tex  a00028.tex  a00029.tex  (+257 more)
examples/: CMakeLists.txt  basic.c  broadcast.c  connector_timeout.c  example_config.h  framework.c  multi_connector.c  multi_loop.c  rpc.c  telnet_echo.c  timer.c
include/: address_api.h  broadcast_api.h  channel_ref_api.h  config.h  framework_config_api.h  hash_api.h  ip_filter_api.h  knet.h  logger_api.h  loop_api.h  misc_api.h  node_api.h  node_config_api.h  ringbuffer_api.h  router_api.h  rpc_object_api.h  stream_api.h  thread_api.h  timer_api.h  trie_api.h  version.h  vrouter_api.h
knet/: CMakeLists.txt  address.c  address.h  address_api.h  broadcast.c  broadcast_api.h  buffer.c  buffer.h  channel.c  channel.h  channel_ref.c  channel_ref.h  channel_ref_api.h  config.h  framework.c  framework.h  framework_acceptor.c  framework_acceptor.h  framework_api.h  framework_config.c  framework_config.h  framework_config_api.h  framework_raiser.c  framework_raiser.h  framework_worker.c  framework_worker.h  hash.c  hash.h  hash_api.h  ip_filter.c  ip_filter_api.h  knet.h  list.c  list.h  logger.c  logger.h  logger_api.h  loop.c  loop.h  loop_api.h  (+46 more)
knet/unstable/: rpc.c  rpc.h
krpc/: CMakeLists.txt  krpc.cpp  krpc.h  krpc_exception.h  krpc_lexer.cpp  krpc_lexer.h  krpc_ostream.cpp  krpc_ostream.h  krpc_parser.cpp  krpc_parser.h
krpc/cpp/: krpc_cpp.cpp  krpc_cpp.h
krpc/cpp_tpl/: header_compile_once.tpl  header_end.tpl  header_entry_class_decl.tpl  header_entry_class_private_field.tpl  header_entry_class_rpc_method_comment_begin.tpl  header_entry_class_rpc_method_comment_end.tpl  header_pre_decls.tpl  header_rpc_call_begin.tpl  header_rpc_call_proxy_begin.tpl  header_rpc_call_stub_decl.tpl  header_struct_comment.tpl  header_struct_field_comment.tpl  header_struct_marshal_unmarshal_decl.tpl  header_struct_method_decl.tpl  header_struct_pre_decl.tpl  source_add_cb.tpl  source_entry_class_impls.tpl  source_entry_ctor_begin.tpl  source_entry_rpc_call_wrapper_method_end.tpl  source_field_unmarshal_array_begin.tpl  source_field_unmarshal_array_end.tpl  source_field_unmarshal_common_get.tpl  source_field_unmarshal_impl_not_array_inline_get.tpl  source_field_unmarshal_not_array_begin.tpl  source_field_unmarshal_not_array_get.tpl  source_field_unmarshal_not_array_inline_attribute.tpl  source_field_unmarshal_table_begin.tpl  source_field_unmarshal_table_common.tpl  source_field_unmarshal_table_common_while.tpl  source_field_unmarshal_table_end.tpl  source_field_unmarshal_table_object.tpl  source_field_unmarshal_table_object_while.tpl  source_pre_decls.tpl  source_struct_field_assign_array.tpl  source_struct_field_assign_common.tpl  source_struct_field_assign_table.tpl  source_struct_marshal_method_begin.tpl  source_struct_marshal_method_end.tpl  source_struct_method_begin.tpl  source_struct_operator_assign_begin.tpl  (+7 more)
krpc/examples/: CMakeLists.txt  rpc.cpp  rpc_sample.cpp  rpc_sample.h  rpc_sample.rpc  rpc_sample_object.rpc
rust/knet-rust-wrapper/: Cargo.toml  build.rs
rust/knet-rust-wrapper/src/: README.md  knet.rs  lib.rs
test/: CMakeLists.txt  test_client.c  test_server.c
unit_test/: CMakeLists.txt  address_case.h  all_test_case.h  channel_ref_case.h  framework_case.h  helper.h  ip_filter.ipf  ip_filter_case.h  loop_profile_case.h  misc_case.h  node_case.h  rpc_object_case.h  stream_case.h  test_case.h  testing.cpp  testing.h  thread_case.h  timer_case.h  trie_case.h  unit_test.cpp  vrouter_case.h
win-proj/: examples-vs2005.vcproj  examples-vs2010.vcxproj  examples.vcxproj  knet-vs2005.sln  knet-vs2005.vcproj  knet-vs2010.sln  knet-vs2010.vcxproj  knet.sln  knetlib-vs2005.vcproj  knetlib-vs2010.vcxproj  knetlib.vcxproj  krpc-vs2010.vcxproj  krpc.vcxproj  test_client-vs2010.vcxproj  test_client.vcxproj  test_server-vs2010.vcxproj  test_server.vcxproj  unit_test-vs2010.vcxproj  unit_test.vcxproj
(+259 files in other folders)
