# CMakeLists file
cmake_minimum_required(VERSION 2.6)

project (knet)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/knet
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY(knet)
ADD_SUBDIRECTORY(krpc)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(test)