# CMakeLists file
cmake_minimum_required(VERSION 2.6)

project (knet)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/knet
)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

ADD_SUBDIRECTORY(knet)
ADD_SUBDIRECTORY(krpc)
ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(test)

add_custom_command(TARGET krpc_post_build
	POST_BUILD 
	COMMAND mkdir ${BINARY_OUTPUT_DIR}/cpp_tpl
	COMMAND cp -rf ${PROJECT_SOURCE_DIR}/cpp_tpl/*.* ${BINARY_OUTPUT_DIR}/cpp_tpl/
)